1. Added Swagger Annotations based on 42-Crunch recommendations to domain objects, controllers. 2. Updated SwaggerConfiguration to add 42-crunch recommendations for Open API Additional Properties.
